tests/fixtures/components/invalid-foldable/auth.blade.php
@blaze

<div>
    Welcome, {{ auth()->user()->name }}
</div>
